--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,6 +1,5 @@
-
 body {
-  color: #585858;
+  /* color: #585858; */
 }
 
 .app-simple {
@@ -8,25 +7,30 @@ body {
   display: flex;
   height: 100vh;
   overflow: hidden;
-  color: black
+  /* color: black */
 }
+
 .pn-member-list {
   --member__padding: 9px 0;
 }
+
 .toggle {
   margin-top: 50px;
   position: relative;
 }
+
 .toggle span {
   font-size: 12px;
   font-weight: bold;
   margin-left: 24px;
 }
+
 .toggle button {
   left: 50%;
   position: absolute;
   transform: translateX(-50%);
 }
+
 .channels {
   background: var(--app-background);
   display: flex;
@@ -34,17 +38,26 @@ body {
   flex-shrink: 0;
   width: 300px;
 }
+
 .channels h4 {
   margin: 34px 24px 12px;
 }
+
+h4 {
+  color: #e67a8ebe
+}
+
 .user {
   display: flex;
   padding: 46px 24px 20px;
 }
+
 .user h4 {
   flex-grow: 1;
   margin: 8px 0;
+  color: #ffffff
 }
+
 .user img {
   background: var(--app-avatar-background);
   display: block;
@@ -53,17 +66,22 @@ body {
   height: 36px;
   border-radius: 36px;
 }
+
 .info {
   padding: 24px 24px 0;
   /* background: #e67a8ea8; */
 
 }
+
 .info h4 {
   margin: 0 0 2px;
+  color: #e67a8ebe
 }
+
 .info small {
   color: var(--app-info-color);
 }
+
 .chat {
   border-radius: 25px;
   display: flex;
@@ -72,8 +90,10 @@ body {
   margin: 30px 30px 30px 0;
   position: relative;
   height: 70%;
-  color: black
+  color: black;
+  border: 1px white
 }
+
 .chat hr {
   background-color: var(--app-info-border);
   border: 0;
@@ -81,37 +101,38 @@ body {
   margin: 18px 0 0;
 }
 
-.pn-channel-list {
+.pn-channel-list--dark {
+  border-radius: 15px 15px 15px 15px;
   height: 100%;
   overflow-y: auto;
   width: 100%;
-  background-color: #e67a8d6e;
+  background-color: #e67a8e00;
 }
 
 .pn-msg-input__textarea {
   background-color: #e67a8d6e;
+  color: white;
 }
 
 .pn-channel {
-  /* align-items: var(--channel__alignItems); */
-  /* background: var(--channel__background); */
   cursor: pointer;
   display: flex;
-  /* justify-content: var(--channel__justifyContent); */
+  background-color: #79797900;
   padding: var(--channel__padding);
   position: relative;
 }
 
-.pn-channel--active{
+.pn-channel--active {
   background: #e67a8d6e;
 }
 
-.pn-channel--hover{
-  background: #e67a8ec2;
+.pn-channel:hover {
+  background: #ffe20400;
 }
 
 .pn-msg-input--dark {
   background: #e67a8e00;
+  color: white
 }
 
 /* .pn-msg-own {
@@ -121,25 +142,43 @@ body {
   --msg__title__flexDirection: row-reverse;
 } */
 
-.pn-msg-own {
-  --msg__avatar__margin: 2px 0 0 18px;
-  --msg__content__alignItems: flex-end;
-  --msg__flexDirection: row-reverse;
-  --msg__title__flexDirection: row-reverse;
+.pn-msg-list-scroller {
+  color: black
 }
 
-.pn-msg-list-scroller {
-  /* background-color: #e67a8e00; */
-  color:black
+::-webkit-scrollbar {
+  display: none;
+}
+
+.pn-msg-input_wrapper {
+  color: white
+}
+
+::placeholder {
+  color: #ffffff;
+  opacity: 1
+  /* font-size: 20px; */
 }
 
 .pn-msg-list--dark {
-  background-color: #e67a8d6e;
-  color: black
+  background-color: #dbe67a00;
+  color: black;
+  border: 5px white;
 }
 
-.pn-msg {
-  color: black
+.pn-msg-list--dark:hover {
+  background-color: #dbe67a00;
+  color: black;
+  border: 5px white;
+}
+
+.pn-msg:hover {
+  color: black;
+  background-color: #dbe67a00;
+}
+
+.pn-msg-input__send--active {
+  color: #e67a8ed0
 }
 
 .app-simple .members {
@@ -151,27 +190,33 @@ body {
   transition: 0.3s ease-in-out;
   width: 0;
 }
+
 .members.shown {
   transform: none;
   width: 310px;
 }
+
 .members h4 {
   margin-top: 54px;
 }
+
 .members .close {
   margin-right: 24px;
 }
+
 .close {
   cursor: pointer;
   display: none;
   float: right;
 }
+
 .hamburger {
   display: none;
   float: left;
   font-size: 24px;
   margin-right: 15px;
 }
+
 .people {
   align-items: center;
   color: var(--app-people-color);
@@ -182,18 +227,25 @@ body {
   right: 34px;
   top: 34px;
   z-index: 1;
+  color: #ffffffd5;
 }
+
 .people.active {
   color: var(--app-people-active-color);
 }
+
 .people span {
   margin: 2px 8px 0 0;
 }
+
 @media (max-width: 950px) {
-  .app-simple .channels, .app-simple .members.shown {
+
+  .app-simple .channels,
+  .app-simple .members.shown {
     width: 200px;
- }
+  }
 }
+
 @media (max-width: 700px) {
   .app-simple .channels {
     height: 100%;
@@ -201,33 +253,41 @@ body {
     z-index: 10;
     transition: 0.3s ease-in-out;
     width: 100%;
- }
+  }
+
   .app-simple .channels:not(.shown) {
     transform: translateX(-100%);
- }
+  }
+
   .app-simple .user {
     padding-top: 24px;
- }
+  }
+
   .app-simple .close {
     display: inline-block;
- }
+  }
+
   .app-simple .chat {
     margin: 5px;
- }
+  }
+
   .app-simple .hamburger {
     display: inline;
- }
+  }
+
   .app-simple .members.shown {
     height: 100%;
     padding: 24px;
     position: absolute;
     z-index: 10;
     width: 100%;
- }
+  }
+
   .app-simple .members.shown h4 {
     margin-top: 0;
- }
+  }
+
   .app-simple .members.shown h4 span {
     margin-right: 48px;
- }
+  }
 }
