--- a/client/src/components/LandingPage/landing.css
+++ b/client/src/components/LandingPage/landing.css
@@ -46,7 +46,7 @@
   border-radius: 15px;
   /* width: 100%; */
   /* width: 250px; */
-  width: 350px;
+  width: 500px;
   object-fit: cover;
   height: 700px;
 }
@@ -63,13 +63,13 @@
     height: 600px;
   }
 }
-@media screen and (min-width: 1300px) {
+/* @media screen and (min-width: 1300px) {
   .splideImg {
     width: 350px;
     height: 500px;
   }
-}
-@media screen and (min-width: 1100px) {
+} */
+/* @media screen and (min-width: 1100px) {
   .splideImg {
     width: 300px;
     height: 400px;
@@ -81,3 +81,8 @@
     height: 400px;
   }
 }
+@media screen and (max-width: 400px) {
+  .splideImg {
+    width: 300px;
+  }
+} */
