--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,9 +1,14 @@
+:root {
+  --chat--light__hover--2: #e4e9f000;
+  --chat--light__background--1: #e4e9f000
+}
+
 body {
   /* color: #585858; */
 }
 
 .app-simple {
-  color: var(--app-color);
+  /* color: var(--app-color); */
   display: flex;
   height: 100vh;
   overflow: hidden;
@@ -67,6 +72,8 @@ h4 {
   border-radius: 36px;
 }
 
+
+
 .info {
   padding: 24px 24px 0;
   /* background: #e67a8ea8; */
@@ -91,11 +98,11 @@ h4 {
   position: relative;
   height: 70%;
   color: black;
-  border: 1px white
+  /* border: 1px white */
 }
 
 .chat hr {
-  background-color: var(--app-info-border);
+  /* background-color: var(--app-info-border); */
   border: 0;
   height: 1px;
   margin: 18px 0 0;
@@ -111,7 +118,7 @@ h4 {
 
 .pn-msg-input__textarea {
   background-color: #e67a8d6e;
-  color: white;
+  /* color: white; */
 }
 
 .pn-channel {
@@ -169,7 +176,7 @@ h4 {
 .pn-msg-list--dark:hover {
   background-color: #dbe67a00;
   color: black;
-  border: 5px white;
+  /* border: 5px white; */
 }
 
 .pn-msg:hover {
