--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -154,7 +154,7 @@ h4 {
 }
 
 .pn-msg-input__textarea {
-  background-color: #e67a8d6e;
+  background-color: #e67a8d6e !important;
   /* color: white; */
 }
 
@@ -175,7 +175,7 @@ h4 {
 }
 
 .pn-msg-input--dark {
-  background: #e67a8e00;
+  background: #e67a8e00 !important;
   color: white
 }
 
@@ -205,7 +205,7 @@ h4 {
 }
 
 .pn-msg-list--dark {
-  background-color: #dbe67a00;
+  background-color: #dbe67a00 !important;
   color: black;
   border: 5px white;
 }
@@ -222,7 +222,7 @@ h4 {
 }
 
 .pn-msg-input__send--active {
-  color: #e67a8ed0
+  color: #e67a8ed0 !important
 }
 
 .app-simple .members {
@@ -291,13 +291,8 @@ h4 {
   width: 100%;
 }
 
-#messageContainer{
+.pn-msg-list pn-msg-list--dark{
   background: rgba(0, 0, 0, 0);
-  height: 100%;
-  overflow: hidden; 
-  padding: var(--msg-list__padding);
-  position: relative;
-  width: 100%;
 }
 
 #customInput{
