--- a/client/src/components/Swipe/swipe.css
+++ b/client/src/components/Swipe/swipe.css
@@ -133,6 +133,10 @@
 @media screen and (max-width: 550px) {
   .card {
     max-width: 100%;
+    /* height: 600px; */
+  }
+  .cardContainer {
+    /* height: 400px; */
   }
   .name_location {
     flex-direction: column;
