--- a/client/src/components/Leetcode/Leetcode.css
+++ b/client/src/components/Leetcode/Leetcode.css
@@ -1,12 +1,20 @@
 .row {
   margin-left: 0;
 }
+.lc_grid {
+  /* background: red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
 .grid_l {
   background: rgba(00, 00, 00, 0.7);
   margin: 0 auto;
   padding: 1rem;
   border-radius: 8px;
-  width: 95%;
+  width: 100%;
 }
 .info_section {
   width: 100%;
